# pruebascpp

./: .gitignore  README.md  bintree.cpp  remove_ctrl.cpp
baseball/: BaseballPlayer.cpp  CMakeLists.txt  Makefile  Person.cpp  Person.h  baseballConfig.h.in  main.cpp
baseball/MakefileAMano/: BaseballPlayer.h  Makefile  MakefileAMano  baseballConfig.h
baseball/gtest/: PersonGtest.cpp
baseball/old_makes/: CMakeLists.txt  CMakeLists.txt.in
baseball/puml/: BaseballPlayer.puml  Person.puml  baseball_project.puml  style.puml
baseball/src/: BaseballPlayer.cpp  BaseballPlayer.h  CMakeLists.txt  Person.cpp  Person.h  main.cpp
baseball/tests/: CMakeLists.txt  Person_test.cpp
casting/: Makefile  ullcast  ullcast.cpp
cppStroustrupExercises/X0303/: holamundo.cpp
cppStroustrupExercises/X0305/: Makefile  main.cpp
cppStroustrupExercises/X0306/: main.cpp
cppStroustrupExercises/X0505/: main.cpp
cppStroustrupExercises/X0509/: main.cpp
cppStroustrupExercises/X0510/: main.cpp
cppStroustrupExercises/X0602/: main.cpp
cppStroustrupExercises/X0602_threads/: main.cpp
cppStroustrupExercises/X0603/: Makefile
cppStroustrupExercises/X0603_timeloop/: main.cpp
cppStroustrupExercises/X0604_histogram/: main.cpp
cppStroustrupExercises/X1402_btree/: Makefile  main.cpp
geducpp/block1_example1/: CMakeLists.txt  hello.cpp
ncurses/mensajeFlotante/: Makefile  main.cpp
opengl/holamundo/: Makefile  main.cpp
operacionesConGrandesNumeros/: operacionesConGrandesNumeros.cpp
qt/CapturaPantalla/: mainwindow.cpp  mainwindow.h
qt/CapturaPantalla2/: README.md  capturaPantalla.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/DBusBackFront/: DBusBackFront.pro
qt/DBusBackFront/Back/: Back.pro  back.cpp  back.h  main.cpp
qt/DBusBackFront/Front/: Front.pro  frontmainwindow.cpp  frontmainwindow.h  frontmainwindow.ui  main.cpp
regex/dni/: CMakeLists.txt  main.cpp
sanitizer/: buffer_1.cpp
